Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-352

obdecho don't work with verify mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.3.0
    • Lustre 2.0.0, Lustre 2.1.0
    • None
    • RHEL6, or RHEL5 with any lustre 2.x
    • 3
    • 4658

      obdecho doesn't work on verify mode.

      [root@rh5-64 utils]# [root@rh5-64 obdfilter-survey]# ./obdfilter-survey
      Mon May 23 07:38:32 EEST 2011 Obdfilter-survey for case=disk from rh5-64.shadowland
      ost 2 sz 33554432K rsz 1024K obj 2 thr 2 write Terminated
      [root@rh5-64 obdfilter-survey]# verify=1 ./obdfilter-survey
      Mon May 23 07:39:01 EEST 2011 Obdfilter-survey for case=disk from rh5-64.shadowland
      ost 2 sz 33554432K rsz 1024K obj 2 thr 2 write 1336928.79 ERROR rewrite 1075489.49 ERROR read

      LustreError: 19113:0:(debug.c:119:block_debug_check()) test_brw: id 0x2 offset 1040384 end id: 0xdeadbeef00c0ffee != 0x2
      LustreError: 19113:0:(debug.c:102:block_debug_check()) test_brw: id 0x2 offset 1044480 off: 0xdeadbeef00c0ffee != 0xff000
      LustreError: 19113:0:(debug.c:107:block_debug_check()) test_brw: id 0x2 offset 1044480 id: 0xdeadbeef00c0ffee != 0x2
      LustreError: 19113:0:(debug.c:114:block_debug_check()) test_brw: id 0x2 offset 1044480 end off: 0xdeadbeef00c0ffee != 0xff000

            hongchao.zhang Hongchao Zhang
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: