LU-352 obdfilter-survey don't work on verify mode.

with r/o cache landing lctl test_brw command need to choose a type
of operation with backend device.
osc need to use obd_brw mode, out obdfilter doen't work in that mode.
it need to force to use a obd_prep + obd_commit more.

Change-Id: I562784b3e9fe537929e78e0197256949cb27a9e1
Signed-off-by: Alexey Lyashkov <alexey_lyashkov@xyratex.com>